// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spacing when custom config is provided when the custom config overrides a value should replace the default value 1`] = `
Object {
  "margin": Object {
    "auto": Object {
      "margin": "auto",
    },
    "bottom": Object {
      "auto": Object {
        "margin-bottom": "auto",
      },
      "large": Object {
        "margin-bottom": "4rem",
      },
      "medium": Object {
        "margin-bottom": "2rem",
      },
      "none": Object {
        "margin-bottom": "0",
      },
      "small": Object {
        "margin-bottom": "1rem",
      },
    },
    "horizontal": Object {
      "auto": Object {
        "margin-left": "auto",
        "margin-right": "auto",
      },
      "large": Object {
        "margin-left": "4rem",
        "margin-right": "4rem",
      },
      "medium": Object {
        "margin-left": "2rem",
        "margin-right": "2rem",
      },
      "none": Object {
        "margin-left": "0",
        "margin-right": "0",
      },
      "small": Object {
        "margin-left": "1rem",
        "margin-right": "1rem",
      },
    },
    "large": Object {
      "margin": "4rem",
    },
    "left": Object {
      "auto": Object {
        "margin-left": "auto",
      },
      "large": Object {
        "margin-left": "4rem",
      },
      "medium": Object {
        "margin-left": "2rem",
      },
      "none": Object {
        "margin-left": "0",
      },
      "small": Object {
        "margin-left": "1rem",
      },
    },
    "medium": Object {
      "margin": "2rem",
    },
    "none": Object {
      "margin": "0",
    },
    "right": Object {
      "auto": Object {
        "margin-right": "auto",
      },
      "large": Object {
        "margin-right": "4rem",
      },
      "medium": Object {
        "margin-right": "2rem",
      },
      "none": Object {
        "margin-right": "0",
      },
      "small": Object {
        "margin-right": "1rem",
      },
    },
    "small": Object {
      "margin": "1rem",
    },
    "top": Object {
      "auto": Object {
        "margin-top": "auto",
      },
      "large": Object {
        "margin-top": "4rem",
      },
      "medium": Object {
        "margin-top": "2rem",
      },
      "none": Object {
        "margin-top": "0",
      },
      "small": Object {
        "margin-top": "1rem",
      },
    },
    "vertical": Object {
      "auto": Object {
        "margin-bottom": "auto",
        "margin-top": "auto",
      },
      "large": Object {
        "margin-bottom": "4rem",
        "margin-top": "4rem",
      },
      "medium": Object {
        "margin-bottom": "2rem",
        "margin-top": "2rem",
      },
      "none": Object {
        "margin-bottom": "0",
        "margin-top": "0",
      },
      "small": Object {
        "margin-bottom": "1rem",
        "margin-top": "1rem",
      },
    },
  },
  "padding": Object {
    "auto": Object {
      "padding": "auto",
    },
    "bottom": Object {
      "auto": Object {
        "padding-bottom": "auto",
      },
      "large": Object {
        "padding-bottom": "4rem",
      },
      "medium": Object {
        "padding-bottom": "2rem",
      },
      "none": Object {
        "padding-bottom": "0",
      },
      "small": Object {
        "padding-bottom": "2rem",
      },
    },
    "horizontal": Object {
      "auto": Object {
        "padding-left": "auto",
        "padding-right": "auto",
      },
      "large": Object {
        "padding-left": "4rem",
        "padding-right": "4rem",
      },
      "medium": Object {
        "padding-left": "2rem",
        "padding-right": "2rem",
      },
      "none": Object {
        "padding-left": "0",
        "padding-right": "0",
      },
      "small": Object {
        "padding-left": "2rem",
        "padding-right": "2rem",
      },
    },
    "large": Object {
      "padding": "4rem",
    },
    "left": Object {
      "auto": Object {
        "padding-left": "auto",
      },
      "large": Object {
        "padding-left": "4rem",
      },
      "medium": Object {
        "padding-left": "2rem",
      },
      "none": Object {
        "padding-left": "0",
      },
      "small": Object {
        "padding-left": "2rem",
      },
    },
    "medium": Object {
      "padding": "2rem",
    },
    "none": Object {
      "padding": "0",
    },
    "right": Object {
      "auto": Object {
        "padding-right": "auto",
      },
      "large": Object {
        "padding-right": "4rem",
      },
      "medium": Object {
        "padding-right": "2rem",
      },
      "none": Object {
        "padding-right": "0",
      },
      "small": Object {
        "padding-right": "2rem",
      },
    },
    "small": Object {
      "padding": "2rem",
    },
    "top": Object {
      "auto": Object {
        "padding-top": "auto",
      },
      "large": Object {
        "padding-top": "4rem",
      },
      "medium": Object {
        "padding-top": "2rem",
      },
      "none": Object {
        "padding-top": "0",
      },
      "small": Object {
        "padding-top": "2rem",
      },
    },
    "vertical": Object {
      "auto": Object {
        "padding-bottom": "auto",
        "padding-top": "auto",
      },
      "large": Object {
        "padding-bottom": "4rem",
        "padding-top": "4rem",
      },
      "medium": Object {
        "padding-bottom": "2rem",
        "padding-top": "2rem",
      },
      "none": Object {
        "padding-bottom": "0",
        "padding-top": "0",
      },
      "small": Object {
        "padding-bottom": "2rem",
        "padding-top": "2rem",
      },
    },
  },
}
`;

exports[`spacing when custom config is provided when the custom config provides a new value should add the value 1`] = `
Object {
  "margin": Object {
    "auto": Object {
      "margin": "auto",
    },
    "bottom": Object {
      "auto": Object {
        "margin-bottom": "auto",
      },
      "large": Object {
        "margin-bottom": "4rem",
      },
      "medium": Object {
        "margin-bottom": "2rem",
      },
      "none": Object {
        "margin-bottom": "0",
      },
      "small": Object {
        "margin-bottom": "1rem",
      },
    },
    "horizontal": Object {
      "auto": Object {
        "margin-left": "auto",
        "margin-right": "auto",
      },
      "large": Object {
        "margin-left": "4rem",
        "margin-right": "4rem",
      },
      "medium": Object {
        "margin-left": "2rem",
        "margin-right": "2rem",
      },
      "none": Object {
        "margin-left": "0",
        "margin-right": "0",
      },
      "small": Object {
        "margin-left": "1rem",
        "margin-right": "1rem",
      },
    },
    "large": Object {
      "margin": "4rem",
    },
    "left": Object {
      "auto": Object {
        "margin-left": "auto",
      },
      "large": Object {
        "margin-left": "4rem",
      },
      "medium": Object {
        "margin-left": "2rem",
      },
      "none": Object {
        "margin-left": "0",
      },
      "small": Object {
        "margin-left": "1rem",
      },
    },
    "medium": Object {
      "margin": "2rem",
    },
    "none": Object {
      "margin": "0",
    },
    "right": Object {
      "auto": Object {
        "margin-right": "auto",
      },
      "large": Object {
        "margin-right": "4rem",
      },
      "medium": Object {
        "margin-right": "2rem",
      },
      "none": Object {
        "margin-right": "0",
      },
      "small": Object {
        "margin-right": "1rem",
      },
    },
    "small": Object {
      "margin": "1rem",
    },
    "top": Object {
      "auto": Object {
        "margin-top": "auto",
      },
      "large": Object {
        "margin-top": "4rem",
      },
      "medium": Object {
        "margin-top": "2rem",
      },
      "none": Object {
        "margin-top": "0",
      },
      "small": Object {
        "margin-top": "1rem",
      },
    },
    "vertical": Object {
      "auto": Object {
        "margin-bottom": "auto",
        "margin-top": "auto",
      },
      "large": Object {
        "margin-bottom": "4rem",
        "margin-top": "4rem",
      },
      "medium": Object {
        "margin-bottom": "2rem",
        "margin-top": "2rem",
      },
      "none": Object {
        "margin-bottom": "0",
        "margin-top": "0",
      },
      "small": Object {
        "margin-bottom": "1rem",
        "margin-top": "1rem",
      },
    },
  },
  "padding": Object {
    "auto": Object {
      "padding": "auto",
    },
    "bottom": Object {
      "auto": Object {
        "padding-bottom": "auto",
      },
      "large": Object {
        "padding-bottom": "4rem",
      },
      "medium": Object {
        "padding-bottom": "2rem",
      },
      "none": Object {
        "padding-bottom": "0",
      },
      "small": Object {
        "padding-bottom": "1rem",
      },
      "verysmall": Object {
        "padding-bottom": ".5rem",
      },
    },
    "horizontal": Object {
      "auto": Object {
        "padding-left": "auto",
        "padding-right": "auto",
      },
      "large": Object {
        "padding-left": "4rem",
        "padding-right": "4rem",
      },
      "medium": Object {
        "padding-left": "2rem",
        "padding-right": "2rem",
      },
      "none": Object {
        "padding-left": "0",
        "padding-right": "0",
      },
      "small": Object {
        "padding-left": "1rem",
        "padding-right": "1rem",
      },
      "verysmall": Object {
        "padding-left": ".5rem",
        "padding-right": ".5rem",
      },
    },
    "large": Object {
      "padding": "4rem",
    },
    "left": Object {
      "auto": Object {
        "padding-left": "auto",
      },
      "large": Object {
        "padding-left": "4rem",
      },
      "medium": Object {
        "padding-left": "2rem",
      },
      "none": Object {
        "padding-left": "0",
      },
      "small": Object {
        "padding-left": "1rem",
      },
      "verysmall": Object {
        "padding-left": ".5rem",
      },
    },
    "medium": Object {
      "padding": "2rem",
    },
    "none": Object {
      "padding": "0",
    },
    "right": Object {
      "auto": Object {
        "padding-right": "auto",
      },
      "large": Object {
        "padding-right": "4rem",
      },
      "medium": Object {
        "padding-right": "2rem",
      },
      "none": Object {
        "padding-right": "0",
      },
      "small": Object {
        "padding-right": "1rem",
      },
      "verysmall": Object {
        "padding-right": ".5rem",
      },
    },
    "small": Object {
      "padding": "1rem",
    },
    "top": Object {
      "auto": Object {
        "padding-top": "auto",
      },
      "large": Object {
        "padding-top": "4rem",
      },
      "medium": Object {
        "padding-top": "2rem",
      },
      "none": Object {
        "padding-top": "0",
      },
      "small": Object {
        "padding-top": "1rem",
      },
      "verysmall": Object {
        "padding-top": ".5rem",
      },
    },
    "vertical": Object {
      "auto": Object {
        "padding-bottom": "auto",
        "padding-top": "auto",
      },
      "large": Object {
        "padding-bottom": "4rem",
        "padding-top": "4rem",
      },
      "medium": Object {
        "padding-bottom": "2rem",
        "padding-top": "2rem",
      },
      "none": Object {
        "padding-bottom": "0",
        "padding-top": "0",
      },
      "small": Object {
        "padding-bottom": "1rem",
        "padding-top": "1rem",
      },
      "verysmall": Object {
        "padding-bottom": ".5rem",
        "padding-top": ".5rem",
      },
    },
    "verysmall": Object {
      "padding": ".5rem",
    },
  },
}
`;

exports[`spacing when no custom config is provided should return the default config 1`] = `
Object {
  "margin": Object {
    "auto": Object {
      "margin": "auto",
    },
    "bottom": Object {
      "auto": Object {
        "margin-bottom": "auto",
      },
      "large": Object {
        "margin-bottom": "4rem",
      },
      "medium": Object {
        "margin-bottom": "2rem",
      },
      "none": Object {
        "margin-bottom": "0",
      },
      "small": Object {
        "margin-bottom": "1rem",
      },
    },
    "horizontal": Object {
      "auto": Object {
        "margin-left": "auto",
        "margin-right": "auto",
      },
      "large": Object {
        "margin-left": "4rem",
        "margin-right": "4rem",
      },
      "medium": Object {
        "margin-left": "2rem",
        "margin-right": "2rem",
      },
      "none": Object {
        "margin-left": "0",
        "margin-right": "0",
      },
      "small": Object {
        "margin-left": "1rem",
        "margin-right": "1rem",
      },
    },
    "large": Object {
      "margin": "4rem",
    },
    "left": Object {
      "auto": Object {
        "margin-left": "auto",
      },
      "large": Object {
        "margin-left": "4rem",
      },
      "medium": Object {
        "margin-left": "2rem",
      },
      "none": Object {
        "margin-left": "0",
      },
      "small": Object {
        "margin-left": "1rem",
      },
    },
    "medium": Object {
      "margin": "2rem",
    },
    "none": Object {
      "margin": "0",
    },
    "right": Object {
      "auto": Object {
        "margin-right": "auto",
      },
      "large": Object {
        "margin-right": "4rem",
      },
      "medium": Object {
        "margin-right": "2rem",
      },
      "none": Object {
        "margin-right": "0",
      },
      "small": Object {
        "margin-right": "1rem",
      },
    },
    "small": Object {
      "margin": "1rem",
    },
    "top": Object {
      "auto": Object {
        "margin-top": "auto",
      },
      "large": Object {
        "margin-top": "4rem",
      },
      "medium": Object {
        "margin-top": "2rem",
      },
      "none": Object {
        "margin-top": "0",
      },
      "small": Object {
        "margin-top": "1rem",
      },
    },
    "vertical": Object {
      "auto": Object {
        "margin-bottom": "auto",
        "margin-top": "auto",
      },
      "large": Object {
        "margin-bottom": "4rem",
        "margin-top": "4rem",
      },
      "medium": Object {
        "margin-bottom": "2rem",
        "margin-top": "2rem",
      },
      "none": Object {
        "margin-bottom": "0",
        "margin-top": "0",
      },
      "small": Object {
        "margin-bottom": "1rem",
        "margin-top": "1rem",
      },
    },
  },
  "padding": Object {
    "auto": Object {
      "padding": "auto",
    },
    "bottom": Object {
      "auto": Object {
        "padding-bottom": "auto",
      },
      "large": Object {
        "padding-bottom": "4rem",
      },
      "medium": Object {
        "padding-bottom": "2rem",
      },
      "none": Object {
        "padding-bottom": "0",
      },
      "small": Object {
        "padding-bottom": "1rem",
      },
    },
    "horizontal": Object {
      "auto": Object {
        "padding-left": "auto",
        "padding-right": "auto",
      },
      "large": Object {
        "padding-left": "4rem",
        "padding-right": "4rem",
      },
      "medium": Object {
        "padding-left": "2rem",
        "padding-right": "2rem",
      },
      "none": Object {
        "padding-left": "0",
        "padding-right": "0",
      },
      "small": Object {
        "padding-left": "1rem",
        "padding-right": "1rem",
      },
    },
    "large": Object {
      "padding": "4rem",
    },
    "left": Object {
      "auto": Object {
        "padding-left": "auto",
      },
      "large": Object {
        "padding-left": "4rem",
      },
      "medium": Object {
        "padding-left": "2rem",
      },
      "none": Object {
        "padding-left": "0",
      },
      "small": Object {
        "padding-left": "1rem",
      },
    },
    "medium": Object {
      "padding": "2rem",
    },
    "none": Object {
      "padding": "0",
    },
    "right": Object {
      "auto": Object {
        "padding-right": "auto",
      },
      "large": Object {
        "padding-right": "4rem",
      },
      "medium": Object {
        "padding-right": "2rem",
      },
      "none": Object {
        "padding-right": "0",
      },
      "small": Object {
        "padding-right": "1rem",
      },
    },
    "small": Object {
      "padding": "1rem",
    },
    "top": Object {
      "auto": Object {
        "padding-top": "auto",
      },
      "large": Object {
        "padding-top": "4rem",
      },
      "medium": Object {
        "padding-top": "2rem",
      },
      "none": Object {
        "padding-top": "0",
      },
      "small": Object {
        "padding-top": "1rem",
      },
    },
    "vertical": Object {
      "auto": Object {
        "padding-bottom": "auto",
        "padding-top": "auto",
      },
      "large": Object {
        "padding-bottom": "4rem",
        "padding-top": "4rem",
      },
      "medium": Object {
        "padding-bottom": "2rem",
        "padding-top": "2rem",
      },
      "none": Object {
        "padding-bottom": "0",
        "padding-top": "0",
      },
      "small": Object {
        "padding-bottom": "1rem",
        "padding-top": "1rem",
      },
    },
  },
}
`;
